cmake_minimum_required(VERSION 3.0.0)

project(random-number-examples LANGUAGES Fortran)

add_executable(random_number_example_01.exe random_number_example_01.f90)
add_executable(random_number_example_02.exe random_number_example_02.f90)
add_executable(random_number_example_03.exe random_number_example_03.f90)
add_executable(random_number_example_04.exe random_number_example_04.f90)
